--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ sitemap:
 	<div id="intro">
            	<h1>{{site.title}}</h1>
 		<h2>Crowd-sourcing 2.0</h2>
-		<p>Flow is a project dedicated to </p>
+		<p>Flow is a project dedicated to new paradigm Research and Development</p>
 			<ul class="actions">
 			<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 			</ul>
@@ -53,21 +53,16 @@ sitemap:
 		<!-- Featured Post -->
 		<article class="post featured">
 		<header class="major">
-			<h2><a href="#">Massively is a versatile Jekyll theme</a></h2>
-			<p>With only a few edits, you can have a stunningly beautiful website <br />
-                    	nearly out of the box. Of course... you can always take it further <br />
-                    	and make it something even more amazing!</p>
+			<h2><a href="#">Flow</a></h2>
+			<p>Rapidly deploy projects through holographic grag and drop templates</p>
 		</header>
 		
 			<a href="#" class="image main"><img src="{{ "/images/pic01.jpg" | absolute_url }}" alt="" /></a>
-                	<p>Regardless of your website's function, the homepage is what brings the user in.
-                  	If it's anything short of intriguing, captivating, or just plain cool, you're out of luck and you might deter some visitors.</p>
-                	
-			<p>Your homepage must clearly describe what your site is about.
-			Having engaging content will in this manner enable you to offer and it will make your customers more inclined to purchase from you. Content is a way to position your organization in the correct place for your clients to discover you.
+                	<p>Example content
 			</p>
+			
 			<p>
-			In this manner, content in itself is a standout amongst the best promoting apparatuses in your whole advertising toolbox! Rather than making your content around your promoting technique, it's limitlessly more productive to fabricate your showcasing around your content.
+			Description
 			</p>
 
 		</article>
